Fixed glitchy x button on Navbar on mobile

--- a/src/components/Navbar/Activated.module.css
+++ b/src/components/Navbar/Activated.module.css
@@ -122,6 +122,10 @@
 }
 
 @media (max-width: 790px) {
+  .menyAvPaa:checked ~ .burger > div:nth-child(3) {
+    transform: translateY(-11.2px) rotate(-45deg);
+  }
+
   #dayContent {
     max-width: 400px;
   }
